...
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text=""
                    android:layout_marginTop="40dp"/>

                <include
                    android:id="@+id/layout_login"
                    layout="@layout/layout_login"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
...
