...

    <string name="register">Регистрация</string>
    <string name="first_name">Име</string>
    <string name="second_name">Презиме</string>
    <string name="surname">Фамилия</string>
    <string name="login_name">"Име"</string>
    <string name="login">Вход</string>
    <string name="login_email_hint">Имейл</string>
    <string name="login_password_hint">Парола</string>
    <string name="login_password_hint_confirm">Повтори паролата</string>
    <string name="signup_login_hint">Вече имате профил? Влезте с него!</string>
    <string name="login_signup_hint">Нямате профил? Регистрирайте се!</string>

...
