...
                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"/>

                <include
                    android:id="@+id/layout_register"
                    layout="@layout/layout_register"/>

            </LinearLayout>

        </RelativeLayout>

...
